Error_list
1:
KeyError
KeyError - данная ошибка возникает если програмист обращается к ключу(элементу) словаря которого нет в данном словаре.
Пример работы:
clovar_x = {'Ваня': 'Менеджер', 'Антон': 'програмист', 'Никита': 'докер'}
print(clovar_x ['Серафим']
Резултатом зпуска данной прграммы будет:
    print(clovar_x ['Серафим'])
          ~~~~~~~~^^^^^^^^^^^^
KeyError: 'Серафим'    - ошибка ключа словаря

2:
SyntaxError
SyntaxError - ошибка которая возникает в случае если програмист написал код с нарушением грамматических правил языка.
Например: не закрыл скобку или ковычку в нужном месте.
Пример работы:
print('Hodor)
Резултат работы такого кода выдаст ошибку:
SyntaxError: EOL while scanning string literal

3:
TypeError
TypeError - ошибка возникает при выполнении операции с несоответсвующим типом. Например, попытка сдлеать операцию
сложения типов int и str (числа и строки) print('Ivan' + 2) мы на выходе получим ошибку TypeError.
Исправляется это первродом числа 2 в строковый тип данных путеп оператора str.

4:
IndentationError или TabError
IndentationError или TabError - возникает, когда в коде использованы неправильные или несовместимые символы табуляции
и пробелов.
Например написание такого кода:
x = 4
if x % 2 == 0:
print(x)
Приведет к ошибке:
IndentationError: expected an indented block after 'if' statement on line 2

5:
MemoryError
MemoryError - данная ошибка возникает когда операции не хватает памяти для выполнения.

6:
NameError
NameError - ошибка возникает если программа пытается обратиться к переменной которая не определена.
Пример:
x = 123
print(y)
Результат работы такой программы приведет к ошибке:
NameError: name 'y' is not defined

